# Guts

./: .gitignore  Cargo.toml  README.md  flake.md  flake.nix  result
.github/workflows/: rust.yml  test.yml  trigger-tap-homebrew.yml
guts-wpkg/: choco  guts-wpkg.nuspec
guts-wpkg/tools/: LICENSE.txt  VERIFICATION.txt  chocolateyinstall.ps1  chocolateyuninstall.ps1
src/: README.md  cli.rs  main.rs
src/cli/: hash_object.rs
src/commands/: add.rs  cat_file.rs  checkout.rs  commit.rs  commit_tree.rs  hash_object.rs  init.rs  log.rs  ls_files.rs  ls_tree.rs  merge.rs  mod.rs  rev_parse.rs  rm.rs  show_ref.rs  status.rs  status_binary_version.rs  write_tree.rs  write_tree_filesystem_version.rs
src/core/: blob.rs  buildTree.rs  build_tree.rs  build_tree_filesystem_version.rs  cat.rs  hash.rs  ignore.rs  mod.rs  object.rs  parse_tree.rs  read_head.rs  repo.rs  resolve_parse.rs  simple_index.rs  status_binary_index.rs  status_dir.rs
src/internals/: object.rs
src/terminal/: app.rs  event.rs  events.rs  mod.rs  run.rs  run_app.rs  tab.rs  tabs.rs  tree.rs  ui.rs
tests/: 01_plumbing_hash_object.rs  02_plumbing_cat_file.rs  03_plumbing_write_tree.rs  04_plumbing_commit_tree.rs  05_integration_workflow.rs  06_plumbing_ls_tree.rs  06_porcelain_ls_files.rs  06_test_gutsignore.rs  README.md  test_add.rs  test_blob.rs  test_cat_file.rs  test_commit_tree.rs  test_hash_object.rs  test_write_tree.rs  tests_init.rs
tests/manual/: 01_porcelain_init.rs  02_porcelain_add.rs  03_porcelain_commit.rs  (+6 more)
windows-installer/: README.md  add-to-path.ps1  config.iss.exemple  guts.iss
