[package]
name = "guts"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
sha1 = "0.10"
hex = "0.4"
ratatui = "0.25"
crossterm = "0.27"

[dev-dependencies]
assert_fs = "1.0"
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.5"