[package]
name = "guts"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.26"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27"
sha1 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["clock"] }
walkdir = "2"

[dev-dependencies]
assert_fs = "1.0"
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.5"
